--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
     "react-hook-form": "^7.67.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.0",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.13"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
+},
+"devDependencies": {
+"@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -31,5 +33,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
-  }
+}
+
 }
